Working landing page, social media connect, login page (frontend), working on getting AI post maker working

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="hero">
         <h1>Manage All Your Social Media Accounts</h1>
         <p>Enhance your socials by posting consistently.</p>
-        <button class="btn" id="get-started-btn" onclick="location.href='connect.html'"><span>Get Started</span></button>
+        <button class="btn" id="get-started-btn" onclick="location.href='login.html'"><span>Get Started</span></button>
     </section>
     
     <section class="features">
