--- a/connect.html
+++ b/connect.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect Socials</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="manager.js"></script>
 </head>
 <body>
     <div class="modal-content">
